--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build":"npm install --prefix Backend && --prefix frontend && npm run build --prefix frontend",
+    "build":"npm install --prefix Backend && npm install --prefix frontend && npm run build --prefix frontend",
     "start":"npm run start --prefix Backend"
   },
   "keywords": [],
